# zigcython

./: .gitignore  README.md  main_zcyth.py  pyproject.toml  setup.py  zcyth.c  zcyth.html  zcyth.py  zigarray.h  zigarray.pxd  zigarray.zig
scripts/: main_vec.zig  notes_setup.md  notes_zig_setup.md  zig_build.py
src/: main_zcyth.py
src/zigcython/cython/: zcyth.py  zigarray.h  zigarray.pxd
src/zigcython/zig/: zigarray.zig
